--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,16 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="destination_list">
+        <item>N/A</item>
+        <item>Woodruff</item>
+        <item>Library</item>
+        <item>Klaus</item>
+        <item>Love</item>
+        <item>Tech Square</item>
+        <item>CoC</item>
+        <item>CRC</item>
+        <item>Stadium</item>
+    </string-array>
 </resources>
